[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu/MenuChoixDeNiveau.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 3.76701e-05
anchor_right = 1.0557
anchor_bottom = 0.143333
margin_left = 416.053
margin_top = 257.304
margin_right = -519.946
margin_bottom = 263.304
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDidactitiel" type="Button" parent="VBoxContainer"]
margin_top = 11.0
margin_right = 144.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -987.065, -387.769 )
text = "Didactitiel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLvl1" type="Button" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 144.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( -987.065, -387.769 )
text = "Niveau 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLvl2" type="Button" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 144.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( -987.065, -387.769 )
text = "Niveau 2"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ButtonDidactitiel" to="." method="_on_ButtonDidactitiel_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLvl1" to="." method="_on_ButtonLvl1_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLvl2" to="." method="_on_ButtonLvl2_pressed"]
